--- a/css/responsive.css
+++ b/css/responsive.css
@@ -48,4 +48,10 @@
   #navbar nav a {
     font-size: 0.9em;
   }
+
+  .col-1, .col-2, .col-3 {
+    width: 100%;
+    margin-left: 0;
+    float: none;
+  }
 }
